--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
             </div>
             <p>Aqui está uma amostra dos pratos que oferecemos:</p>
             <ul>
-                <li>Prato 1</li>
-                <li>Prato 2</li>
-                <li>Prato 3</li>
-                <li>Prato 4</li>
+                <li>GALINHA CAIPIRA</li>
+                <li>MOCOTÓ</li>
+                <li>FEIJOADA</li>
+                <li>ASSADO DE PANELA</li>
+                <li>CARNE DE PORCO ASSADA</li>
+                <li>TORTA DE CAMARÃO</li>
+                <li>TORTA DE FRANGO</li>
+                <li>CARNE DE SOL E BIFE</li>
             </ul>
             <p>Visite-nos para descobrir mais opções deliciosas!</p>
         </div>
@@ -109,8 +113,8 @@
             <div class="contact">
                 <h2>Entre em Contato</h2>
                 <p>Estamos ansiosos para ouvir de você!</p>
-                <p>Telefone: (XX) XXXX-XXXX</p>
-                <p>Email: contato@sossego.com</p>
+                <p>Telefone: (98) 8426-6417</p>
+                <p>Email: restaurantesossego38@gmail.com</p>
             </div>
         </div>
     </section>
